syntax = "proto3";
package proto;

message HelloRequest {
    string name = 1;
}

message HelloResponse {
    string name = 1;
}

service HelloService {
    // sayhello
    rpc SayHello(HelloRequest) returns (HelloResponse) {}
}